--- a/index.html
+++ b/index.html
@@ -705,6 +705,24 @@
                                 <span class="text-sm font-medium text-gray-600">Saldo Metal:</span>
                                 <span id="country_metal_balance" class="text-sm font-semibold text-purple-600">N/A</span>
                             </div>
+                            <!-- NOVOS CAMPOS AQUI -->
+                            <div class="flex justify-between">
+                                <span class="text-sm font-medium text-gray-600">Tecnologia Civil:</span>
+                                <span id="display_country_tech_civil" class="text-sm font-semibold text-purple-600">N/A</span>
+                            </div>
+                            <div class="flex justify-between">
+                                <span class="text-sm font-medium text-gray-600">Tecnologia Aeronáutica:</span>
+                                <span id="display_country_air_tech" class="text-sm font-semibold text-purple-600">N/A</span>
+                            </div>
+                            <div class="flex justify-between">
+                                <span class="text-sm font-medium text-gray-600">Urbanização:</span>
+                                <span id="display_country_urbanization" class="text-sm font-semibold text-purple-600">N/A</span>
+                            </div>
+                            <div class="flex justify-between">
+                                <span class="text-sm font-medium text-gray-600">Redução de Custo do País:</span>
+                                <span id="display_country_cost_reduction" class="text-sm font-semibold text-purple-600">N/A</span>
+                            </div>
+                            <!-- FIM DOS NOVOS CAMPOS -->
                             <div id="metal_balance_status" class="text-xs font-medium mt-1 text-center"></div>
                         </div>
 
